// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly 1`] = `
<button
  className="sticker-button"
  onClick={[Function]}
>
  <img
    alt="overview.stickers.marketing.alt"
    src="http://foo.bar"
  />
</button>
`;

exports[`should display correctly 2`] = `
<button
  className="sticker-button selected"
  onClick={[Function]}
>
  <img
    alt="overview.stickers.marketing.alt"
    src="http://foo.bar"
  />
</button>
`;
